# CV

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
CV/src/lib/: date.cpp
cmake/: FindFake.cmake  FindGTest.cmake  FindOpenCV.cmake
scripts/: appbuild.sh  exe.sh  gdb.sh  reposbuild.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/baseVideo/: BaseVideo.cpp  CMakeLists.txt  baseVideo.hpp
src/display/: CMakeLists.txt  Display.cpp  display.cpp  display.hpp
src/display/headers/: display.hpp
src/headers/: display.hpp
src/lib/: CMakeLists.txt
src/mock/: CMakeLists.txt  mockdisp.hpp  mockproc.hpp
src/process/: CMakeLists.txt  process.cpp  process.hpp
src/process/headers/: process.hpp
src/record/: CMakeLists.txt  Record.cpp  record.hpp
src/src/: display.cpp
src/thread-pool/: CMakeLists.txt  ThreadPool.cpp
src/thread-pool/include/: ThreadPool.h
tests/: CMakeLists.txt  DisplayTest.cpp
tests/mock/: mockdisp.hpp
tests/testDisplay/: CMakeLists.txt
